[package]
name = "penrose-cody"
version = "0.1.0"
authors = ["Cody Bloemhard <codybloemhard@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# penrose = "0.3.6"
penrose = { path = "../penrose-updated" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
